# gptoggle-core

./: .gitignore  CHANGELOG.md  CONTEXTUALIZED_INTELLIGENCE.md  CONTRIBUTING.md  DEVELOPER.md  INSTALLATION.md  JS_INSTALLATION.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  MODEL_REGISTRY.md  MODULAR_ADAPTIVE_INTELLIGENCE.md  QUICK_START.md  README-contextualized-intelligence.md  README.md  REPLIT_INSTALLATION.md  REPLIT_INSTALLATION.md.updated  REST_API_DOCS.md  UNIVERSAL_MODULE_ID_SCHEMA.md  WEB_INTERFACE.md  chat.py  compare.py  config.py  contextualHelpers.ts  example.py  example_complete.js  example_contextualized_v2.js  example_contextualized_v2.py  example_enhanced.js  example_model_agnostic.js  gptoggle-example.js  gptoggle-example.py  gptoggle-web-example.html  gptoggle_enhanced.js  gptoggle_enhanced.py  gptoggle_minimal_test.py  gptoggle_model_agnostic.js  gptoggle_v2.js  gptoggle_v2.py  install.py  (+19 more)
claudetoggle-core/: .gitignore
core/: gptoggle_v2.py
docs/: MODULE_GUIDE.md  QUICK_START.md  UMID_SPEC.md
examples/: README.md  advanced_features.js  api_config.md  basic_usage.py  client_library.js  client_library.py  contextualized-demo-simple.js  contextualized-intelligence-demo.ts  example_v2.py  gptoggle_followup_example.py  llama_example.py  nodejs_client.js  perplexity_example.py  rest_api.py
gptoggle/: __init__.py  chat.py  compare.py  config.py  utils.py
gptoggle-core/: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  example.py  gptoggle.js  gptoggle_enhanced.py  index.js  install.py  install_dev.py  package.json  pyproject.toml  quickstart.sh  release.py  replit_install.sh  setup.py  test_package.py
gptoggle-core/.github/workflows/: python-tests.yml
gptoggle-core/docs/: CHANGELOG.md  JS_INSTALLATION.md  README.md  REPLIT_INSTALLATION.md
gptoggle-core/examples/: gptoggle-enhanced-example.js  gptoggle_enhanced_example.py  test_installation.py
gptoggle-core/examples/javascript/: browser-example.html  gptoggle-followup-example.js
gptoggle-core/gptoggle/: __init__.py  chat.py  compare.py  config.py  triage.py
gptoggle-core/gptoggle/providers/: __init__.py  base_provider.py  claude_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py
gptoggle-core/tests/: test_config.py  test_triage.py
gptoggle/providers/: __init__.py  claude_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py
modules/: umidGenerator.py  umidGenerator.ts
src/context/: contextualHelpers.ts
src/core/: modelRegistry.ts  toggle.ts
src/modules/: moduleService.py  moduleService.ts  moduleServiceUMID.py
src/profile/: userProfileSchema.json
src/utils/: config.ts  logger.ts
static/css/: style.css
templates/: index.html
tests/: test_config.py  test_core.py  test_modules.py  test_triage.py  toggle.test.ts
