[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptoggle"
version = "2.0.0"
description = "Multi-provider AI model wrapper with modular adaptive intelligence"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GPToggle Team"}
]
keywords = [
    "ai", "gpt", "claude", "gemini", "openai", "anthropic", 
    "google-ai", "multi-provider", "adaptive-intelligence", 
    "modular-ai", "umid", "universal-modules"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "flask>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0"
]
web = [
    "gunicorn>=20.1.0",
    "flask-cors>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/gptoggle"
Documentation = "https://github.com/yourusername/gptoggle/tree/main/docs"
Repository = "https://github.com/yourusername/gptoggle.git"
Issues = "https://github.com/yourusername/gptoggle/issues"
Changelog = "https://github.com/yourusername/gptoggle/blob/main/CHANGELOG.md"

[project.scripts]
gptoggle = "gptoggle.cli:main"

[tool.setuptools.packages.find]
where = ["core"]
include = ["gptoggle*"]

[tool.setuptools.package-data]
gptoggle = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=gptoggle --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true