[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptoggle-core"
version = "1.0.3"
description = "Multi-provider AI model wrapper with intelligent model selection"
readme = "README.md"
authors = [
    {name = "GPToggle Team", email = "lano@docdel.io"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "openai", "claude", "gemini", "grok", "gpt", "chatgpt", "api", "wrapper"]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
claude = ["anthropic>=0.5.0"]
gemini = ["google-generativeai>=0.3.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/onalius/gptoggle-core"
"Bug Tracker" = "https://github.com/onalius/gptoggle-core/issues"
"Documentation" = "https://github.com/onalius/gptoggle-core/blob/main/README.md"

[tool.setuptools]
py-modules = ["gptoggle_minimal", "gptoggle_enhanced"]